update trips to support changes in frontend adapt api-spec to prepare for country code
